--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
 
-	<h1>Lorem ipsum dolor sit amet.</h1>
+	<section id="video3d">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<img src="img/huevo.png" class="huevo img-responsive text-center" alt="">
+					<div class="circulo_huevo"></div>
+				</div>
+				<div class="col-sm-6">
+					<div class="texto_video3d">
+						<span>Descubre el mundo del</span>
+						<span>modelado</span>
+						<span>y</span>
+						<span>animaciones</span>
+						<span>3D</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<script src="asset/bootstrap/js/jquery.min.js"></script>
 	<script src="asset/bootstrap/js/bootstrap.min.js"></script>
