--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 				<div class="col-sm-6">
 					<img src="img/huevo.png" class="huevo img-responsive text-center" alt="">
 					<div class="circulo_huevo"></div>
+					<div class="programa">
+						<span>Con la tecnología de</span>
+						<img src="img/logo_blender.png" width="100px;" alt="">
+					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="texto_video3d">
