--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 
 	<section id="video3d">
-		<div class="container">
-			<div class="row">
+		<div class="container" id="container">
+			<div class="row" id="scene">
 				<div class="col-sm-6">
-					<img src="img/huevo.png" class="huevo img-responsive text-center" alt="">
-					<div class="circulo_huevo"></div>
+					<img src="img/huevo.png" class="huevo img-responsive layer text-center" alt="" data-depth="0.35">
+					<div class="circulo_huevo layer" data-depth="0.15"></div>
 					<div class="programa">
 						<span>Con la tecnología de</span>
 						<img src="img/logo_blender.png" width="100px;" alt="">
@@ -22,16 +22,26 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="texto_video3d">
-						<span>Descubre el mundo del</span>
-						<span>modelado</span>
-						<span>y</span>
-						<span>animaciones</span>
-						<span>3D</span>
+						<span class="layer" data-depth="0.10">Descubre el mundo del</span>
+						<span class="layer" data-depth="0.20">modelado</span>
+						<span class="layer" data-depth="0.30">y</span>
+						<span class="layer" data-depth="0.15">animaciones</span>
+						<span class="layer" data-depth="0.35">3D</span>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<!-- Parallax -->
+	<script src="asset/js/parallax.js"></script>
+	<script>
+
+	// Pretty simple huh?
+	var scene = document.getElementById('scene');
+	var parallax = new Parallax(scene);
+
+	</script>
 	
 	<script src="asset/bootstrap/js/jquery.min.js"></script>
 	<script src="asset/bootstrap/js/bootstrap.min.js"></script>
