--- a/video.html
+++ b/video.html
@@ -47,6 +47,12 @@
 				</div>
 			</div>
 		</div>
+		<div class="lista_videos">
+			<div class="cont_lista">
+				<div class="video_item" style="background-image: url('asset/video/video_primero.jpg');"></div>
+				<div class="video_item"></div>
+			</div>
+		</div>
 	</section>
 	
 	<script src="asset/bootstrap/js/jquery.min.js"></script>
