--- a/nosotros.html
+++ b/nosotros.html
@@ -23,6 +23,7 @@
 					<div class="cont-img">
 						<img class="blur" src="img/gaston_bn.png" alt="">
 						<img class="color" src="img/gaston_color.png" alt="">
+						<img class="alas" src="img/ala.png" alt="">
 					</div>
 					<div class="cont-info text-right">
 						<span class="nombre ">Gastón<br> Acuña</span><br>
@@ -33,6 +34,8 @@
 					<div class="cont-img ">
 						<img class="blur" src="img/joni_bn.png" alt="">
 						<img class="color" src="img/joni_color.png" alt="">
+						<img class="parche" src="img/parche.png" alt="">
+						<img class="pirata img-responsive" src="img/pirata.png" alt="">
 					</div>
 					<div class="cont-info text-right">
 						<span class="nombre">Jonathan<br> Llamas</span><br>
@@ -49,21 +52,6 @@
 	<script src="asset/bootstrap/js/bootstrap.min.js"></script>
 	<script src="asset/js/main.js"></script>
 	<script src="asset/js/jqfloat.js"></script>
-
-	<script>
-		var baloon = $('#float');
-		var baloonDos = $('#float-dos') 
-   		function runIt() {
-   		    baloon.animate({top:'+=10'}, 1000);
-   		    baloon.animate({top:'-=10'}, 1000, runIt);
-   		    baloonDos.animate({top:'-=10'}, 1000);
-   		    baloonDos.animate({top:'+=10'}, 1000, runIt);
-   		}
-		
-   		runIt();
-
-   		
-	</script>
 
 </body>
 </html>
