--- a/video.html
+++ b/video.html
@@ -34,6 +34,7 @@
 	</section>
 
 	<section id="videos">
+		<div class="separacion_video_sup"></div>
 		<div class="textura">
 			<div class="oscurecer"></div>
 		</div>
@@ -77,6 +78,7 @@
 				<div class="video_item" style="background-image: url('asset/video/video_segundo.jpg');"></div>
 			</div>
 		</div>
+		<div class="separacion_video_inf"></div>
 	</section>
 
 	<section id="programacion">
