--- a/video.html
+++ b/video.html
@@ -99,7 +99,7 @@
 
 				<div class="col-sm-6 mockup">
 					<div class="cd-product-mockup" id="float">
-						<img src="img/imagen.jpg"  class="img-responsive" alt="">
+						<img src="img/bebes.jpg"  class="img-responsive" alt="">
 						<div class="cd-3d-right-side"></div>
 						<div class="cd-3d-bottom-side"></div>
 					</div>
