--- a/viruska.html
+++ b/viruska.html
@@ -42,15 +42,17 @@
 			color: #fff;
 			font-family: "PierBlackItalic";
 			transform: rotate(-5deg);
-			margin-top: -150px;
+			margin-top: -170px;
 		}
 		#viruska .titulosup{
-			font-size: 24px;
-			z-index: 5;
-		}
-		#viruska .tituloinf{
 			font-size: 36px;
 			z-index: 5;
+			position: relative;
+		}
+		#viruska .tituloinf{
+			font-size: 48px;
+			z-index: 5;
+			position: relative;
 		}
 		#viruska .fondo_exp{
 			z-index: 0 !important;
@@ -58,7 +60,48 @@
 			height: 120px;
 			background-image: url('img/titulo_viruska.png');
 			position: absolute;
-			top: 0;
+			top: -20px;
+			left: -50px;
+			z-index: 1;
+		}
+
+		#viruska .img-item{
+			width: 100%;
+			height: 400px;
+			background-size: cover;
+			background-position: center;
+			overflow: hidden;
+		}
+			#viruska .img-item:before{
+				content: "";
+				width: 800px;
+				left: -700px;
+				top: -50px;
+				height: 800px;
+				background-color: rgba(0,0,0,.9);
+				position: absolute;
+				transform: rotate(-40deg);
+				animation: 1.4s slide_viruska 1;
+				opacity: 1;
+			}
+			#viruska .img-item:after{
+				content: "";
+				width: 800px;
+				left: -700px;
+				top: -50px;
+				height: 800px;
+				background-color: rgba(0,0,0,.9);
+				position: absolute;
+				transform: rotate(-20deg);
+				animation: 1.4s slide_viruska 1;
+				opacity: 1;
+			}
+
+		@keyframes slide_viruska{
+			from{
+				opacity: 0;
+				left: -1200px;
+			}
 		}
 
 		#viruska .info_viruska{
@@ -66,12 +109,29 @@
 		}
 		#viruska .info_viruska h3{
 			font-size: 24px;
-			font-family: "AleoLight";
+			font-family: "AleoBold";
 		}
 		#viruska .info_viruska p{
 			font-size: 18px;
-			font-family: 'EconomicaRegular';
+			font-family: 'AleoLight';
 		}
+
+		#viruska .tecnologia_viruska{
+			font-family: 'Abel', sans-serif;
+			text-transform: uppercase;
+			vertical-align: middle;
+			color: #ccc;
+			font-size: 10px;
+			text-align: center;
+			margin-top: 25px;
+			position: absolute;
+			bottom: 0;
+			right: 150px;
+		}
+			#viruska .tecnologia_viruska img{
+				filter: grayscale(100%);
+				margin: 0px 10px;
+			}
 
 	</style>
 
@@ -87,7 +147,7 @@
 						
 						<div class="titulosup">Crea la identidad corporativa</div>
 						<div class="tituloinf">de tu propia empresa</div>
-						<!-- <span class="fondo_exp"></span> -->
+						<span class="fondo_exp"></span>
 					</div>
 				</div>
 			</div>
@@ -95,7 +155,30 @@
 				<div class="col-sm-4">
 					<img src="img/viruska.png" class="img-responsive" alt="">
 				</div>
-				<div class="col-sm-8"></div>
+				<div class="col-sm-8">
+					<div id="carousel-id" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#carousel-id" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-id" data-slide-to="1" class=""></li>
+							<li data-target="#carousel-id" data-slide-to="2" class=""></li>
+							<li data-target="#carousel-id" data-slide-to="3" class=""></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="item active">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad1.jpg');"></div>
+							</div>
+							<div class="item">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad2.jpg');"></div>
+							</div>
+							<div class="item">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad3.jpg');"></div>
+							</div>
+							<div class="item">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad4.jpg');"></div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="row info_viruska">
 				<div class="col-sm-4">
@@ -109,6 +192,11 @@
 				<div class="col-sm-4">
 					<h3>Competencias</h3>
 					<p>La cervecería y maltería Viruska tiene como competencia a: Brahma, que es propietaria de varias marcas de cerveza, tales como: Andes, Norte, Iguana, Palermo, Bieckert y Quilmes.</p>
+				</div>
+				<div class="tecnologia_viruska">
+					<span>Con la tecnología de</span>
+					<img src="img/photoshop.svg" width="30px;" alt=""> y
+					<img src="img/illustrator.svg" width="30px;" alt="">
 				</div>
 			</div>
 		</div>
