--- a/video.html
+++ b/video.html
@@ -68,7 +68,9 @@
 							<div class="persona_cargo">Gastón Acuña</div>
 						</li>
 					</ul>
-					<a href="#" class="btn btn-default">Ver corto</a>
+					<a href="#" class="btn btn-default launch-modal" data-modal-id="modal-video">
+                        Ver corto
+                    </a>
 				</div>
 			</div>
 		</div>
@@ -79,7 +81,31 @@
 			</div>
 		</div>
 		<div class="separacion_video_inf"></div>
+
+		<div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="modal-video-label">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="modal-video">
+                            <video width="800px" height="" controls>
+								<source class="video-abierto" src="asset/video/video_primero.mp4" type="video/mp4">
+							</video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</section>
+
+
+
+
+
 
 	<section id="programacion">
 		
@@ -169,6 +195,13 @@
    		runIt();
 
    		
+	</script>
+
+	<script>
+		$('.launch-modal').on('click', function(e){
+	    	e.preventDefault();
+	    $( '#' + $(this).data('modal-id') ).modal();
+		});
 	</script>
 
 </body>
