--- a/index.html
+++ b/index.html
@@ -33,6 +33,197 @@
 		</div>
 	</section>
 
+	<section id="videos">
+		<div class="separacion_video_sup"></div>
+		<div class="textura">
+			<div class="oscurecer"></div>
+		</div>
+		<video id="video_primero" playsinline autoplay muted loop>
+			<source src="asset/video/video_primero.mp4" type="video/mp4">
+		</video>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 explicacion_muestra">
+					<h1>Aprende la magia<br><span class="salto_linea">de la <span class="amarillo">edición</span></span></h1>
+					<p class="texto_explicacion">Domina el paquete <span class="amarillo">adobe</span> con programas como after effects, premier, audition, entre otros.</p>
+				</div>
+				<div class="col-sm-4 col-sm-offset-2 explicacion_corto">
+					<h3>Primer°<span class="fondo_h3"></span></h3>
+					<ul clas="list-unstyled">
+						<li>
+							<div class="cargo">Director</div>
+							<div class="persona_cargo">Jonathan Llamas</div>
+						</li>
+						<li>
+							<div class="cargo">Cámara</div>
+							<div class="persona_cargo">
+								<ul class="list-unstyled list-inline">
+									<li>Tania Lago</li>
+									<li>Hector Oyola</li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<div class="cargo">Actor</div>
+							<div class="persona_cargo">Gastón Acuña</div>
+						</li>
+					</ul>
+					<a href="#" class="btn btn-default launch-modal" data-modal-id="modal-video">
+                        Ver corto
+                    </a>
+				</div>
+			</div>
+		</div>
+		<div class="lista_videos">
+			<div class="cont_lista">
+				<div class="video_item" style="background-image: url('asset/video/video_primero.jpg');"></div>
+				<div class="video_item" style="background-image: url('asset/video/video_segundo.jpg');"></div>
+			</div>
+		</div>
+		<div class="separacion_video_inf"></div>
+
+		<div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="modal-video-label">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="modal-video">
+                            <video width="800px" height="" controls>
+								<source class="video-abierto" src="asset/video/_video-primero.mp4" type="video/mp4">
+							</video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+	</section>
+
+	<section id="programacion">
+		
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<img src="" alt="">
+					<div class="rotacion">
+						<h3 class="subtitulo">Está a la vanguardia en</h3>
+						<h2 class="titulo">Diseño web</h2>
+					</div>
+					<h3 class="subtitulo">Aprendiendo sobre</h3>
+					<ul>
+						<li><span class="pintura"></span>Web responsive</li>
+						<li><span class="pintura"></span>Usabilidad y funcionalidad</li>
+						<li><span class="pintura"></span>Diseños estáticos y dinamicos</li>
+					</ul>
+				</div>
+
+				<div class="col-sm-6 mockup">
+					<div class="cd-product-mockup" id="float">
+						<img src="img/bebes.jpg"  class="img-responsive" alt="">
+						<div class="cd-3d-right-side"></div>
+						<div class="cd-3d-bottom-side"></div>
+					</div>
+					<div class="sombra" id="sombra"></div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container contenedor-dos">
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="cd-product-mockup" id="float-dos">
+						<img src="img/imagen.jpg"  class="img-responsive" alt="">
+						<div class="cd-3d-right-side"></div>
+						<div class="cd-3d-bottom-side"></div>
+					</div>
+					<div class="sombra" id="sombra"></div>
+				</div>
+				<div class="col-sm-6 text-right">
+					<img src="" alt="">
+					<div class="rotacion">
+						<h3 class="subtitulo">Utiliza frameworks de </h3>
+						<h2 class="titulo">Programación</h2>
+					</div>
+					<ul>
+						<li><span class="pintura"></span>Jquery</li>
+						<li><span class="pintura"></span>Bootstrap</li>
+						<li><span class="pintura"></span>Codeigniter</li>
+						<li><span class="pintura"></span>Framework 7</li>
+						<li><span class="pintura"></span>Y muchos mas</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
+		<section id="viruska">
+		<div class="separacion_viruska_sup"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="explicacion_sec">
+						
+						<div class="titulosup">Crea la identidad corporativa</div>
+						<div class="tituloinf">de tu propia empresa</div>
+						<span class="fondo_exp"></span>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="img/viruska.png" class="img-responsive" alt="">
+				</div>
+				<div class="col-sm-8">
+					<div id="carousel-id" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#carousel-id" data-slide-to="0" class="active"></li>
+							<li data-target="#carousel-id" data-slide-to="1" class=""></li>
+							<li data-target="#carousel-id" data-slide-to="2" class=""></li>
+							<li data-target="#carousel-id" data-slide-to="3" class=""></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="item active">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad1.jpg');"></div>
+							</div>
+							<div class="item">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad2.jpg');"></div>
+							</div>
+							<div class="item">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad3.jpg');"></div>
+							</div>
+							<div class="item">
+								<div class="img-item" style="background-image: url('img/viruska/publicidad4.jpg');"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row info_viruska">
+				<div class="col-sm-4">
+					<h3>¿Qué es Viruska?</h3>
+					<p>Viruska es un equipo integrado por unas 500 personas, apasionadas por la cerveza y estando completamente comprometidos trabajando todos los días en seguir creando el mejor producto desde siempre.</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Objetivos:</h3>
+					<p>Tiene como objetivo lograr que la existencia de la marca sea conocida por el 100% del público objetivo y que al menos un 20% haya efectuado una compra a prueba.</p>
+				</div>
+				<div class="col-sm-4">
+					<h3>Competencias</h3>
+					<p>La cervecería y maltería Viruska tiene como competencia a: Brahma, que es propietaria de varias marcas de cerveza, tales como: Andes, Norte, Iguana, Palermo, Bieckert y Quilmes.</p>
+				</div>
+				<div class="tecnologia_viruska">
+					<span>Con la tecnología de</span>
+					<img src="img/photoshop.svg" width="30px;" alt=""> y
+					<img src="img/illustrator.svg" width="30px;" alt="">
+				</div>
+			</div>
+		</div>
+		<div class="separacion_viruska_inf"></div>
+	</section>
+
 	<!-- Parallax -->
 	<script src="asset/js/parallax.js"></script>
 	<script>
@@ -46,5 +237,29 @@
 	<script src="asset/bootstrap/js/jquery.min.js"></script>
 	<script src="asset/bootstrap/js/bootstrap.min.js"></script>
 	<script src="asset/js/main.js"></script>
+	<script src="asset/js/jqfloat.js"></script>
+
+	<script>
+		var baloon = $('#float');
+		var baloonDos = $('#float-dos') 
+   		function runIt() {
+   		    baloon.animate({top:'+=10'}, 1000);
+   		    baloon.animate({top:'-=10'}, 1000, runIt);
+   		    baloonDos.animate({top:'-=10'}, 1000);
+   		    baloonDos.animate({top:'+=10'}, 1000, runIt);
+   		}
+		
+   		runIt();
+
+   		
+	</script>
+
+	<script>
+		$('.launch-modal').on('click', function(e){
+	    	e.preventDefault();
+	    $( '#' + $(this).data('modal-id') ).modal();
+		});
+	</script>
+
 </body>
 </html>
