--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<img src="" alt="">
 					<div class="rotacion">
 						<h3 class="subtitulo">Está a la vanguardia en</h3>
-						<h2 class="titulo">Diseño web</h2>
+						<h2 class="titulo diseno-web">Diseño web</h2>
 					</div>
 					<h3 class="subtitulo">Aprendiendo sobre</h3>
 					<ul>
@@ -145,7 +145,7 @@
 					<img src="" alt="">
 					<div class="rotacion">
 						<h3 class="subtitulo">Utiliza frameworks de </h3>
-						<h2 class="titulo">Programación</h2>
+						<h2 class="titulo programacion">Programación</h2>
 					</div>
 					<ul>
 						<li><span class="pintura"></span>Jquery</li>
