--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 explicacion_muestra">
-					<h1>Aprende la magia<br><span class="salto_linea">de la <span class="amarillo">edición</span></span></h1>
+					<div class="titulo">
+						<div class="titulosup">Aprender la magia</div>
+						<div class="tituloinf">de la <span class="amarillo">edición</span></div>
+					</div>
 					<p class="texto_explicacion">Domina el paquete <span class="amarillo">adobe</span> con programas como after effects, premier, audition, entre otros.</p>
 				</div>
 				<div class="col-sm-4 col-sm-offset-2 explicacion_corto">
