--- a/nosotros.html
+++ b/nosotros.html
@@ -21,6 +21,7 @@
 			<div class="row cont-caras">
 				<div class="col-sm-4 gaston">
 					<div class="cont-img">
+						<span class="apodo">Jasty</span>
 						<img class="blur" src="img/gaston_bn.png" alt="">
 						<img class="color" src="img/gaston_color.png" alt="">
 						<img class="alas" src="img/ala.png" alt="">
@@ -32,6 +33,7 @@
 				</div>
 				<div class="col-sm-4 joni">
 					<div class="cont-img ">
+						<span class="apodo">Jona</span>
 						<img class="blur" src="img/joni_bn.png" alt="">
 						<img class="color" src="img/joni_color.png" alt="">
 						<img class="parche" src="img/parche.png" alt="">
