--- a/nosotros.html
+++ b/nosotros.html
@@ -49,6 +49,16 @@
 	
 
 	</section>
+
+	<section id="copyright">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					Desarrollado con <i class="fa fa-heart" aria-hidden="true"></i> y cariño
+				</div>
+			</div>
+		</div>
+	</section>
 	
 	<script src="asset/bootstrap/js/jquery.min.js"></script>
 	<script src="asset/bootstrap/js/bootstrap.min.js"></script>
