--- a/nosotros2.html
+++ b/nosotros2.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Programacion</title>
 	<link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="asset/css/style.css">
+	<link rel="stylesheet" href="asset/css/style2.css">
 	<link rel="stylesheet" href="asset/fontawesome/css/font-awesome.min.css">
 </head>
 <body>
@@ -19,35 +19,43 @@
 				</div>
 			</div>
 			<div class="row cont-caras">
-				<div class="col-sm-4 gaston">
+				<div class="col-sm-6 gaston">
 					<div class="cont-img">
-						<span class="apodo">Jasty</span>
+						<div class="apodo">Jasty</div>
 						<img class="blur" src="img/gaston_bn.png" alt="">
 						<img class="color" src="img/gaston_color.png" alt="">
 						<img class="alas" src="img/ala.png" alt="">
 					</div>
 					<div class="cont-info text-right">
-						<span class="nombre ">Gastón<br> Acuña</span><br>
+						<span class="nombre">Gaston<br>Acuña</span><br>
 						<span class="profesion">Estudiante</span>
 					</div>
 				</div>
-				<div class="col-sm-4 joni">
-					<div class="cont-img ">
-						<span class="apodo">Jona</span>
+				<div class="col-sm-6 joni">
+					<div class="cont-img">
+						<div class="apodo">Jona</div>
 						<img class="blur" src="img/joni_bn.png" alt="">
 						<img class="color" src="img/joni_color.png" alt="">
 						<img class="parche" src="img/parche.png" alt="">
-						<img class="pirata img-responsive" src="img/pirata.png" alt="">
+						<img class="pirata" src="img/pirata.png" alt="">
 					</div>
-					<div class="cont-info text-right">
-						<span class="nombre">Jonathan<br> Llamas</span><br>
+					<div class="cont-info">
+						<span class="nombre">Joathan<br>Llamas</span><br>
 						<span class="profesion">Estudiante</span>
 					</div>
 				</div>
 			</div>
 		</div>
-	
+	</section>
 
+	<section id="copyright">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					Desarrollado con <i class="fa fa-heart" aria-hidden="true"></i> y cariño
+				</div>
+			</div>
+		</div>
 	</section>
 	
 	<script src="asset/bootstrap/js/jquery.min.js"></script>
