--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
 </head>
 <body>
 
+	<section id="inicio">
+		<div class="sep_inicio_iz"></div><div class="sep_inicio_de"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<div class="carrera">
+						<div class="sub">Tecnicatura en</div>
+						<div class="titulo">Realización<br><span>Multimedial</span></div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2">
+					<p class="info_carrera text-center">Es un profesional especializado en el área multimedia en los distintos medios de la hipercomunicación y la hipermedia- con conocimientos de los procesos técnicos y de los recursos expresivos. Por otra parte es un profesional polivalente capacitado para poner en escena un proyecto, un plan de trabajo y un presupuesto previo, con equipos interciciplinarios</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 logos">
+					<!-- <img src="img/ulp.png" class="center-block" alt=""> -->
+					<!-- <img src="img/icad.png" class="center-block" alt=""> -->
+					<img src="img/logos.png" class="center-block" alt="">
+					<div class='icon-scroll'><div/>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section id="video3d">
 		<div class="container" id="container">
 			<div class="row" id="scene">
