--- a/index.html
+++ b/index.html
@@ -254,6 +254,63 @@
 		<div class="separacion_viruska_inf"></div>
 	</section>
 
+	<section id="galeria">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 cabecera">
+					<div class="sub">Trabajos realizados por</div>
+					<div class="titulo">Los <span class="resaltado">estudiantes</span></div>
+				</div>
+			</div>
+			<div class="row soga-uno">
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+			</div>
+			<div class="row soga-dos">
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+					<div class="polaroid">
+						<div class="muestra"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="piso"></div>
+
+	</section>
+
 	<!-- Parallax -->
 	<script src="asset/js/parallax.js"></script>
 	<script>
