--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div class="titulosup">Aprender la magia</div>
 						<div class="tituloinf">de la <span class="amarillo">edición</span></div>
 					</div>
-					<p class="texto_explicacion">Domina el paquete <span class="amarillo">Adobe</span> con programas como after effects, premier, audition, entre otros.</p>
+					<p class="texto_explicacion">Domina el paquete <span class="amarillo">adobe</span> con programas como after effects, premier, audition, entre otros.</p>
 				</div>
 				<div class="col-sm-4 col-sm-offset-2 explicacion_corto">
 					<h3>Primer°<span class="fondo_h3"></span></h3>
