--- a/galeria.html
+++ b/galeria.html
@@ -5,6 +5,7 @@
 	<title>Programacion</title>
 	<link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="asset/css/style.css">
+	<link rel="stylesheet" href="asset/css/style2.css">
 	<link rel="stylesheet" href="asset/fontawesome/css/font-awesome.min.css">
 </head>
 <body>
