--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div class="titulosup">Aprender la magia</div>
 						<div class="tituloinf">de la <span class="amarillo">edición</span></div>
 					</div>
-					<p class="texto_explicacion">Domina el paquete <span class="amarillo">adobe</span> con programas como after effects, premier, audition, entre otros.</p>
+					<p class="texto_explicacion">Domina el paquete <span class="amarillo">Adobe</span> con programas como after effects, premier, audition, entre otros.</p>
 				</div>
 				<div class="col-sm-4 col-sm-offset-2 explicacion_corto">
 					<h3>Primer°<span class="fondo_h3"></span></h3>
@@ -308,7 +308,54 @@
 			</div>
 		</div>
 		<div class="piso"></div>
+		<div class="color"></div>
+	</section>
 
+	<section id="nosotros">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1><span></span>Trabajo realizado por</h1>
+				</div>
+			</div>
+			<div class="row cont-caras">
+				<div class="col-sm-6 gaston">
+					<div class="cont-img">
+						<div class="apodo">Jasty</div>
+						<img class="blur" src="img/gaston_bn.png" alt="">
+						<img class="color" src="img/gaston_color.png" alt="">
+						<img class="alas" src="img/ala.png" alt="">
+					</div>
+					<div class="cont-info text-right">
+						<span class="nombre">Gaston<br>Acuña</span><br>
+						<span class="profesion">Estudiante</span>
+					</div>
+				</div>
+				<div class="col-sm-6 joni">
+					<div class="cont-img">
+						<div class="apodo">Jona</div>
+						<img class="blur" src="img/joni_bn.png" alt="">
+						<img class="color" src="img/joni_color.png" alt="">
+						<img class="parche" src="img/parche.png" alt="">
+						<img class="pirata" src="img/pirata.png" alt="">
+					</div>
+					<div class="cont-info">
+						<span class="nombre">Joathan<br>Llamas</span><br>
+						<span class="profesion">Estudiante</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="copyright">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					Desarrollado con <i class="fa fa-heart" aria-hidden="true"></i> y cariño
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<!-- Parallax -->
